--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,18 @@
-spring.application.name=sql
+spring.application.name=demo
+# Don't change the port
+server.port=9001
 
-server.port=9003
 
-# Primary MySQL Configuration (for college portal)
-# spring.datasource.url=jdbc:mysql://localhost:3306/dynamic_tickets?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-# spring.datasource.username=root
-# spring.datasource.password=Amypo
 
-# Fallback H2 Configuration (for local testing)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+# for https
+spring.datasource.url=jdbc:mysql://localhost:3306/DVD?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# JWT Configuration
-jwt.secret=mySecretKey
-jwt.expiration=86400000
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+jwt.secret=MyVeryStrongJwtSecretKeyThatIsAtLeast32Characters
+jwt.validity=86400000
